Stop divison names not wrapping

--- a/votes/static/css/_tables.scss
+++ b/votes/static/css/_tables.scss
@@ -43,7 +43,6 @@
 
 .table-wrapped {
     overflow-x: auto;
-    white-space: nowrap;
     padding-bottom: 1rem;
 }
 
